<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>cnag-beacon</groupId>
  <artifactId>cnag-beacon</artifactId>
  <version>1.0</version>
  <packaging>war</packaging>
  <name>cnag-beacon</name>
    
  <build>
  <plugins>
     <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>3.1</version>
          <configuration>
               <source>1.7</source>
               <target>1.7</target>
           </configuration>
      </plugin>            
      <plugin>            
	    <groupId>org.apache.tomcat.maven</groupId>
	    <artifactId>tomcat7-maven-plugin</artifactId>
	    <configuration>
	    <contextReloadable>true</contextReloadable>
	    <systemProperties>
	      <JAVA_OPTS>-Xdebug -Xmx1024m -Xms256m -XX:MaxPermSize=256m
	       -Xnoagent
	       -Xrunjdwp:transport=dt_socket,server=y,suspend=y,address=8000</JAVA_OPTS>
	    </systemProperties>
	    </configuration>
      </plugin>   
  </plugins>
  </build> 
  
  <properties>
   		 <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>
  
  <dependencies>   
     	<dependency>
			<groupId>com.sun.jersey</groupId>
			<artifactId>jersey-server</artifactId>
			<version>1.8</version>
		</dependency>	
		<dependency>
			<groupId>com.sun.jersey</groupId> 
			<artifactId>jersey-json</artifactId>
			<version>1.8</version>
		</dependency>
		<dependency>
			<groupId>commons-logging</groupId>
			<artifactId>commons-logging</artifactId>
			<version>1.1.1</version>
		</dependency>				
		<dependency>
    		<groupId>org.elasticsearch</groupId>
    		<artifactId>elasticsearch</artifactId>
    		<version>2.3.0</version>
		</dependency>		
		<dependency>
	        <groupId>org.jboss.resteasy</groupId>
	        <artifactId>resteasy-jaxb-provider</artifactId>
	        <version>2.3.4.Final</version>
    	</dependency>       
  </dependencies>
</project>